tests/machine/x/go/group_by_conditional_sum.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_conditional_sum.go:13:13: undefined: ItemsItem
tests/machine/x/go/group_by_conditional_sum.go:17:5: undefined: ItemsItem
tests/machine/x/go/group_by_conditional_sum.go:21:5: undefined: ItemsItem
tests/machine/x/go/group_by_conditional_sum.go:26:21: undefined: Result
tests/machine/x/go/group_by_conditional_sum.go:84:16: undefined: Result
tests/machine/x/go/group_by_conditional_sum.go:86:30: undefined: Result
